<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>dataproxy-api</module>
        <module>dataproxy-common</module>
<!--        <module>dataproxy-manager</module>-->
<!--        <module>dataproxy-service</module>-->
        <module>dataproxy-server</module>
<!--        <module>dataproxy-integration-tests</module>-->
        <module>dataproxy-plugins</module>
        <module>dataproxy-core</module>
    </modules>

    <groupId>org.secretflow</groupId>
    <artifactId>dataproxy</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>dataproxy</name>

    <description>dataproxy parent pom</description>

    <properties>
        <java.version>17</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
        <maven-dependency-plugin.version>3.7.1</maven-dependency-plugin.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>

        <plugin.os.version>1.7.1</plugin.os.version>
        <plugin.protobuf.version>0.6.1</plugin.protobuf.version>
        <plugin.maven.resources>3.3.1</plugin.maven.resources>

        <lombok.version>1.18.34</lombok.version>

        <arrow.version>18.0.0</arrow.version>
        <protobuf.version>4.28.3</protobuf.version>
        <grpc.version>1.68.1</grpc.version>
        <netty.version>4.1.115.Final</netty.version>
        <javax-annotation-api.version>1.3.2</javax-annotation-api.version>
        <jakarta.validation-api.version>3.1.0</jakarta.validation-api.version>

        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.6</logback.version>
        <caffeine.version>3.1.8</caffeine.version>
        <snakeyaml.version>2.0</snakeyaml.version>

        <!-- https://central.sonatype.com/artifact/com.aliyun.odps/odps-sdk-core -->
        <odps-code.version>0.50.4-public</odps-code.version>
        <snappy-java.version>1.1.10.7</snappy-java.version>

        <commons-io.version>2.17.0</commons-io.version>

        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-compress.version>1.26.2</commons-compress.version>
        <commons-configuration2.version>2.10.1</commons-configuration2.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- arrow code bom-->
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-bom</artifactId>
                <version>${arrow.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- netty bom -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-bom</artifactId>
                <version>${netty.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- grpc bom -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- protobuf bom -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-bom</artifactId>
                <version>${protobuf.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax-annotation-api.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta.validation-api.version}</version>
            </dependency>

            <!-- logs bom start -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-bom</artifactId>
                <version>${slf4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-parent</artifactId>
                <version>${logback.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- logs bom end -->

            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>


            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>

            <!-- plugins package start-->
            <dependency>
                <groupId>com.aliyun.odps</groupId>
                <artifactId>odps-sdk-core</artifactId>
                <version>${odps-code.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.codehaus.jackson</groupId>
                        <artifactId>jackson-mapper-asl</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.core</groupId>
                        <artifactId>jackson-databind</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.fasterxml.jackson.core</groupId>
                        <artifactId>jackson-annotations</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.google.protobuf</groupId>
                        <artifactId>protobuf-java</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.google.code.gson</groupId>
                        <artifactId>gson</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- plugins package end -->

            <dependency>
                <groupId>org.xerial.snappy</groupId>
                <artifactId>snappy-java</artifactId>
                <version>${snappy-java.version}</version>
            </dependency>


            <!-- dataproxy package start -->
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-integration-tests</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-manager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.secretflow</groupId>
                <artifactId>dataproxy-plugin-odps</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- dataproxy package end -->

        </dependencies>
    </dependencyManagement>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>${plugin.os.version}</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${session.executionRootDirectory}/libs
                            </outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <includeScope>runtime</includeScope> <!-- 只拷贝runtime范围的依赖 -->
                            <excludeTransitive>false</excludeTransitive> <!-- 不拷贝传递性依赖 -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>


        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.xolstice.maven.plugins</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${plugin.protobuf.version}</version>
                    <configuration>
                        <pluginId>grpc-java</pluginId>
                        <clearOutputDirectory>false</clearOutputDirectory>
                        <outputDirectory>src/main/java</outputDirectory>
                        <!--suppress UnresolvedMavenProperty -->
                        <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                        </protocArtifact>
                        <!--suppress UnresolvedMavenProperty -->
                        <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                        </pluginArtifact>
                    </configuration>
                    <executions>
                        <execution>
                            <id>src</id>
                            <goals>
                                <goal>compile</goal>
                                <goal>compile-custom</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>